--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="container">
     <div class="c-card">
-      <img src="../images/image-qr-code.png" alt="Qr-code">
+      <img src="/images/image-qr-code.png" alt="Qr-code">
    
       <h1>Improve your front-end skills by building projects</h1>
 
